--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,5 @@
       "src/i18n",
     ],
     "i18n-ally.keystyle": "nested",
-    "i18n-ally.displayLanguage": "zh-cn"
+    "i18n-ally.displayLanguage": "zh-CN"
 }
