--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "@nestjs/core": "^7.6.15",
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/swagger": "^4.8.0",
+    "@typegoose/typegoose": "^7.6.0",
+    "mongoose": "^5.12.11",
     "nestjs-i18n": "^8.1.1",
+    "nestjs-typegoose": "^7.1.38",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
