--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/swagger": "^4.8.0",
     "@typegoose/typegoose": "^7.6.0",
+    "cache-manager": "^3.4.3",
+    "cache-manager-redis-store": "^2.0.0",
     "mongoose": "^5.12.11",
     "nestjs-i18n": "^8.1.1",
     "nestjs-typegoose": "^7.1.38",
@@ -38,6 +40,7 @@
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
+    "@types/cache-manager": "^3.4.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
