🐳 chore: add mailer

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.6.0",
     "@nestjs/common": "^7.6.15",
     "@nestjs/core": "^7.6.15",
     "@nestjs/platform-express": "^7.6.15",
@@ -28,9 +29,11 @@
     "@typegoose/typegoose": "^7.6.0",
     "cache-manager": "^3.4.3",
     "cache-manager-redis-store": "^2.0.0",
+    "handlebars": "^4.7.7",
     "mongoose": "^5.12.11",
     "nestjs-i18n": "^8.1.1",
     "nestjs-typegoose": "^7.1.38",
+    "nodemailer": "^6.6.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
