--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@typegoose/typegoose": "^7.6.0",
     "cache-manager": "^3.4.3",
     "cache-manager-redis-store": "^2.0.0",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "handlebars": "^4.7.7",
     "mongoose": "^5.12.11",
     "nestjs-i18n": "^8.1.1",
