--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/platform-socket.io": "^7.6.17",
     "@nestjs/swagger": "^4.8.0",
+    "@nestjs/websockets": "^7.6.17",
     "@typegoose/typegoose": "^7.6.0",
     "cache-manager": "^3.4.3",
     "cache-manager-redis-store": "^2.0.0",
@@ -56,6 +58,7 @@
     "@types/node": "^14.14.36",
     "@types/passport-jwt": "^3.0.5",
     "@types/passport-local": "^1.0.33",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
